# argos-hids

./: .env.sample  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  ann-model.py  config.py  dataset-analysis.py  dataset.py  lstm-model-lightning.py  main.py  pyproject.toml  requirements.txt  setup.py  testscen.py
.github/workflows/: pr-validation.yaml
dataparse/: __init__.py
dataparse/dongting/: .gitignore  README.md  __init__.py  loader.py  mapping.csv  requirements.txt
dataparse/lid/: .gitignore  README.md  __init__.py  loader.py  requirements.txt
dataset/dongting/: .gitignore  loader.py  requirements.txt
datasets/dongting/: __init__.py  loader.py  requirements.txt
datasets/lid/: README.md
datasets/lid-ds/: .gitignore  README.md  __init__.py  lid_loader.py  loader.py  requirements.txt
models/: .gitignore  __init__.py  inference.py  lstm.py  requirements.txt
models/gan/: .gitignore  README.md  generator.py  requirements.txt
models/gnn/: .gitignore  README.md  autoencoder.py  lid_gnn.py  supervised.py  supervised_lid.py
models/lstm/: .gitignore  README.md  __init__.py  autoencoder.py  requirements.txt  trainer.py
notifications/: README.md  __init__.py  ntfy.py
tetragon/: README.md  __init__.py  bpf_pb2_grpc.py  capabilities_pb2_grpc.py  config.yaml  events_pb2.py  events_pb2_grpc.py  monitor.py  sensors_pb2.py  sensors_pb2_grpc.py  stack_pb2_grpc.py  tetragon_pb2.py  tetragon_pb2_grpc.py
tetragon/proto/: bpf_pb2.py  bpf_pb2_grpc.py  capabilities_pb2.py  capabilities_pb2_grpc.py  events.proto  events_pb2.py  events_pb2_grpc.py  sensors.proto  sensors_pb2.py  sensors_pb2_grpc.py  stack_pb2.py  stack_pb2_grpc.py  tetragon.proto  tetragon_pb2.py  tetragon_pb2_grpc.py
trained/dongting/: gnn-autoencoder.pt  gnn.pt  lstm-autoencoder.pt  lstm.pt  mapping.csv
